# parquet-path-rewriter

./: .gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: basic_usage.py
src/parquet_path_rewriter/: __init__.py
