[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parquet-path-rewriter"
version = "0.1.0"
authors = [
  { name="Rafael Sales", email="rafael.sales@gmail.com" },
]
description = "A library to rewrite relative Parquet file paths in Python code using AST manipulation."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose appropriate license
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Intended Audience :: Developers",
]
keywords = ["ast", "parquet", "rewrite", "refactor", "pyspark", "pandas"]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/dmux/parquet-path-rewriter"
"Bug Tracker" = "https://github.com/dmux/parquet-path-rewriter/issues"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]
